-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
The patch 2de353860782: "staging: lustre: create striped directory"
from Aug 16, 2016, leads to the following static checker warning:
drivers/staging/lustre/lustre/llite/namei.c:294 ll_md_blocking_ast()
warn: 'master_inode' isn't an ERR_PTR
drivers/staging/lustre/lustre/llite/namei.c
287
288 hash =
cl_fid_build_ino(&lli->lli_pfid,
289
ll_need_32bit_api(ll_i2sbi(inode)));
290
291 master_inode =
ilookup5(inode->i_sb, hash,
292
ll_test_inode_by_fid,
293 (void
*)&lli->lli_pfid);
294 if (master_inode &&
!IS_ERR(master_inode)) {
^^^^^^^^^^^^^^^^^^^^
ilookup5() never returns ERR_PTRs.