lustre/llite/namei.c
@@ -331,8 +331,7 @@ int ll_md_blocking_ast(struct ldlm_lock *lock, struct ldlm_lock_desc *desc,
 				master_inode = ilookup5_nowait(inode->i_sb,
 						    hash, ll_test_inode_by_fid,
 							(void *)&lli->lli_pfid);
-				if (master_inode != NULL &&
-					!IS_ERR(master_inode)) {
+				if (master_inode) {
 					ll_invalidate_negative_children(
 								master_inode);
 					iput(master_inode);
